--- a/index.html
+++ b/index.html
@@ -472,7 +472,8 @@
                         <div class="option-item">
                             <label>字体族</label>
                             <select id="fontFamily">
-                                <option value="'Microsoft YaHei', Arial, sans-serif">微软雅黑 (默认)</option>
+                                <option value="FangSong, serif">仿宋 (默认)</option>
+                                <option value="'Microsoft YaHei', Arial, sans-serif">微软雅黑</option>
                                 <option value="'SimSun', serif">宋体</option>
                                 <option value="'SimHei', sans-serif">黑体</option>
                                 <option value="Arial, sans-serif">Arial</option>
